Projects page completed

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
-        <h1>Nicholas St-Amour</h1>
-        <h3>nicholas.m.stamour@gmail.com | (613) 315-1395</h3>
+        <h1 class="stick">Nicholas St-Amour</h1>
+        <h3 class="stick">nicholas.m.stamour@gmail.com | (613) 315-1395 | Bilingual (French & English)</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
