--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,8 @@
     </ul>
 
     <h2><strong>PROGRAMMING PROJECTS</strong></h2>
-    <hr>
+    <hr style="margin-bottom: 0;">
+    <p class="stick" style="margin-bottom: 0.25rem;">You can find more in-depth explanations of the projects on the 'Projects' page</p>
     <h4>Full-Stack Hotel Booking System (Completed)</h4>
     <p class="stick">Node.js, PostgreSQL, React, CSS | Mar 2025</p>
     <ul>
@@ -71,6 +72,15 @@
     <ul>
         <li>Engineered a scalable tic tac toe game supporting variable grid sizes and win conditions</li>
         <li>Developed a computer opponent to further push my work</li>
+    </ul>
+
+    <h4>Personal Portfolio Website (Ongoing)</h4>
+    <p class="stick">HTML, CSS, JavaScript | Jul 2025 - Present</p>
+    <ul>
+        <li>Designed and developed a responsive personal website to showcase projects, skills, and interests</li>
+        <li>Implemented a custom layout using HTML and CSS to ensure scalability across desktop and mobile devices.</li>
+        <li>Incorporated <strong>JavaScript</strong> to enhance interactivity, including a dynamic image slideshow and automated "last updated" timestamp functionality</li>
+        <li>Used this project as an opportunity to deepen my understanding of front-end development concepts</li>
     </ul>
 
     <h2><strong>WORK EXPERIENCE</strong></h2>
