added images to project and shorten descriptions

--- a/hobbies.html
+++ b/hobbies.html
@@ -14,7 +14,7 @@
     <main class="container">
         <h2>Here are a few of my hobbies!</h2>
         <p>
-            This section takes a more relaxed and informal tone than the rest of my site, but I hope it offers a clearer picture of who I am beyond work. It’s also a space for me to practice my HTML skills.
+            This section takes a more relaxed and informal tone than the rest of my site, but I hope it offers a clearer picture of who I am beyond work. It's also a space for me to practice my HTML skills.
             Who knows — if you look closely, you might even notice that I bring the same level of effort and dedication to my hobbies as I do to my professional pursuits.
         </p>
 
@@ -32,7 +32,7 @@
             Triathlon has become my favorite sports. I find the training incredibly rewarding! There's a clear connection between the effort I put in and the improvements I see in my fitness. I enjoy pushing my limits during races as a way to challenge myself and prove what I'm capable of. While I'm proud of all my races, my favorite is the personal triathlon I complete every year on my birthday. 
         </p>
         <p>
-            I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple. Suppose a is my age. I swim a*100m, bike a*5km, and run a*1km. Since these distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
+            I started this tradition in 2024 at age 19 and plan to continue it for as long as I can. The format is simple. Suppose a is my age. I swim a×100m, bike a×5km, and run a×1km. Since these distances don't match any official race, I complete it on my own, which adds an extra level of challenge and meaning.
         </p>
         <div class="slideshow-container">
             <div class="slide"><img src="images/Triatlon-bike1.jpg"></div>
