removed some more text

--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
     <main class="container">
         <img src="images/profile.jpg" alt="Profile photo" class="profile-photo"/>
         <h2>Welcome!</h2>
-        <p>
-            I'm a third year student in Data Science (Honours B.Sc. in Computer Science / Honours B.Sc. in Mathematics) at the University of Ottawa.
-            I have found great intrest in my Computer Science classes, especially learning how to make a website, creating application and graphs theory. This site shares my academic work, CV and hobbies.
-        </p>
-        <p>
-            Feel free to explore my website. You'll find detailed information about my personal projects under the "Projects" tab,
-            my resume under "Resume", and a glimpse into my hobbies under "Hobbies" if you'd like to get to know me better.
-        </p>
+        <p>I'm a third year student in Data Science (Honours B.Sc. in Computer Science / Honours B.Sc. in Mathematics) at the University of Ottawa. I have found great intrest in my Computer Science classes, especially learning how to make a website, creating applications and graphs theory.</p>
+        <p>Feel free to explore my website. You'll find detailed information about my achademic projects under the "Projects" tab, my resume under "Resume", and a glimpse into my hobbies under "Hobbies" if you'd like to get to know me better.</p>
     </main>
 
     <footer>
