--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,10 @@
     <h4>Full-Stack Hotel Booking System (Completed)</h4> 
 <p class="stick">Node.js, PostgreSQL, React, CSS | Mar 2025</p>
 <p>This group project involved building a full-stack hotel booking system. Our team of three designed an ER diagram, translated it into a relational schema, and implemented it using PostgreSQL with pgAdmin 4. We ensured data accuracy for hotel details, room availability, and customer reservations through constraints, queries, and triggers.</p>
-<p>The React-based web app allowed clients to search for rooms using multiple criteria while employees managed reservations, stays, and payments. My favorite part was designing and implementing the SQL database. Despite a one-month timeframe and five other courses, we delivered a well-structured, functional application, earning a 97% grade.</p>
+<p>The React-based web app allowed clients to search for rooms using multiple criteria while employees managed reservations and payments. My favorite part was designing and implementing the database. Despite a one-month timeframe and five other courses, we delivered a well-structured, functional application, earning a 97% grade.</p>
 <p>View the project at <a href="https://github.com/glk-0/e-Hotels" target="_blank" rel="noopener noreferrer">https://github.com/glk-0/e-Hotels</a>.</p>
 <div class="slideshow-container">
+    <div class="slide"><img src="images/Filter room.png"></div>
     <div class="slide"><img src="images/Info sur chambre.png"></div>
     <div class="slide"><img src="images/Available rooms.png"></div>
     <div class="slide"><img src="images/Querry.png"></div>
@@ -28,20 +29,20 @@
 
 <h4>Personal Portfolio Website (Ongoing)</h4>
 <p class="stick">HTML, CSS, JavaScript | Jul 2025 - Present</p>
-<p>This website strengthens my front-end development skills while showcasing my projects and interests. Each section, from navigation menus to image galleries, is a hands-on experiment, letting me explore HTML, CSS, and JavaScript techniques while refining my understanding of modern web design.</p>
+<p>This website strengthens my front-end development skills while showcasing my projects and interests. Each section is a hands-on experiment, letting me explore HTML, CSS, and JavaScript techniques.</p>
 <p>Beyond being a portfolio, it's a sandbox for experimentation. Interactive features like a custom slideshow and automated “last updated” timestamp allow me to test ideas, revisit concepts, and continually evolve the site.</p>
 
 <h4>Adaptive Tic Tac Toe Game (Completed)</h4>
 <p class="stick">Java | Jun 2024</p>
-<img src="images/GameMain.java 1 15 21 10.png" class="photo"/>
-<p>This started as a simple 3×3 Tic Tac Toe assignment, but I chose to push beyond the requirements, turning it into a customizable version supporting any grid size and win condition, playable in two-player mode or against a random-move computer. Looking back, it marked a key milestone in my growth as a developer, showing how rewarding it is to go further than expected and explore a problem’s full potential. One day, I may revisit it to add AI capabilities to the computer.</p>
+<img src="images/GameMain.java 1 3 3 3.png" class="photo"/>
+<p>This started as a simple 3×3 Tic Tac Toe assignment playable in two-player mode or against a random-move computer. I chose to push beyond the requirements, turning it into a customizable version supporting any grid size and win condition. Looking back, it marked a key milestone in my growth as a developer, showing how rewarding it is to push the limits and explore a problem's full potential. One day, I may revisit it to add AI capabilities to the computer.</p>
 <p>View the project at <a href="https://github.com/NicholasSt-Amour/Adaptive-Tic-Tac-Toe.git" target="_blank" rel="noopener noreferrer">https://github.com/NicholasSt-Amour/Adaptive-Tic-Tac-Toe.git</a>.</p>
 
 <h4>Software Development (Completed)</h4>
 <p class="stick">Java, XML, SQLite, Android Studio | Sep 2024 - Dec 2024</p>
-<p>This was my first large-scale collaborative software project, where our team of four developed a mobile Event Attendance Management System to streamline event registration. We designed a reliable database in SQL, implemented efficient data handling with extensive field validation, and built a functional UI for three types of users.</p>
 <img src="images/SEG brainstorm.jpg" class="photo" style="float: right; margin-right: 0rem;">
-<p>We added JUnit tests as the codebase reached thousands of lines, holding weekly meetings to resolve challenges. The four deliverables seemed impossible at first, yet consistent teamwork led to success, earning us 101.5% out of 104.5% and long-term teammates in coding.</p>
+<p>This was my first large-scale collaborative software project, where our team of four developed a mobile Event Attendance Management System to streamline event registration. We designed a reliable database in SQL, implemented efficient data handling with extensive field validation, and built a functional UI for three types of users.</p>
+<p>We added JUnit tests as the codebase reached thousands of lines, holding weekly meetings to resolve challenges. The project seemed impossible at first, yet consistent teamwork led to success, earning us 101.5% out of 104.5% and long-term teammates in coding.</p>
 <p>The project is large, so I recommend watching our demo video (which is set at 2x speed) instead. View the project at <a href="https://github.com/uOttawaSEG/project-project-group-15" target="_blank" rel="noopener noreferrer">https://github.com/uOttawaSEG/project-project-group-15</a>.</p>
 
     <video id="demoVideo" width="100%" height="auto" controls>
